--- a/ESchoolOffice/templates/layout/base_template.html
+++ b/ESchoolOffice/templates/layout/base_template.html
@@ -267,20 +267,20 @@
 
         <div class="clearfix"></div>
 
-        <!-- Footer -->
-        <footer class="site-footer">
-            <div class="footer-inner bg-white">
-                <div class="row">
-                    <div class="col-sm-6">
-                        Copyright &copy; 2018 Ela Admin
-                    </div>
-                    <div class="col-sm-6 text-right">
-                        Designed by <a href="https://colorlib.com">Colorlib</a>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!-- /.site-footer -->
+<!--        &lt;!&ndash; Footer &ndash;&gt;-->
+<!--        <footer class="site-footer">-->
+<!--            <div class="footer-inner bg-white">-->
+<!--                <div class="row">-->
+<!--                    <div class="col-sm-6">-->
+<!--                        Copyright &copy; 2018 Ela Admin-->
+<!--                    </div>-->
+<!--                    <div class="col-sm-6 text-right">-->
+<!--                        Designed by <a href="https://colorlib.com">Colorlib</a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </footer>-->
+<!--        &lt;!&ndash; /.site-footer &ndash;&gt;-->
 
     </div>
     <!-- /#right-panel -->
